# python-codemagic-api

./: LICENSE  README.md  pyproject.toml  setup.py
src/python_codemagic_api/: base_endpoint.py  codemagic_api.py
src/python_codemagic_api/endpoints/: applications.py  artifacts.py  builds.py  caches.py  teams.py
src/python_codemagic_api/utils/: applications_utils.py
